--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -185,10 +185,11 @@
 								<td>Price:</td>
 								<td class="price" id="price_<%= @product.netsuite_item_no %>">
 									<%= 
+								
 									if user_signed_in? then
-										if current_user.clinician 
+										if current_user.role == "clinician" or current_user.role == "administrator"
 								  		case current_user.clinic.price_schedule
-												when "tru-blue"
+												when "tru-blu"
 													number_to_currency(@product.price_tru_blue)
 												when "corporate-2"
 													number_to_currency(@product.price_corporate_2)
