--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -62,31 +62,32 @@
 					  <%= f.email_field :email %></div>
 
 					  <div><%= f.label :password %> <i>(Leave blank if you don't want to change it.)</i><br />
-					  	<%= f.password_field :password %></div>
+					  <%= f.password_field :password %></div>
 
 					  <div><%= f.label :password_confirmation %><br />
-					  	<%= f.password_field :password_confirmation %></div>
+					  <%= f.password_field :password_confirmation %></div>
 
 					  <div><%= f.label :current_password %> <i><span style="color:orange;">(We need your current password to confirm your changes.)</span></i><br />
-					  	<%= f.password_field :current_password %></div>
-				
-					  <div><%= f.label "Are you a clinician? " %><br />
-					  	<%= f.check_box :clinician %></div>
-					
-					  <div><%= f.label "Are you a clinic administrator? " %><br />
-				  		<%= f.check_box :administrator %></div>
-
-					  <div><%= f.label "Clinic id" %><br />
-					  	<%= f.text_field :clinic_id %></div>					
+					  <%= f.password_field :current_password %></div>
 					<!--
+						<div><%= f.label "Are you a clinician? " %><br />
+					  <#= f.check_box :clinician %></div>
+					
 						<div><%= f.label "Clinic name" %><br />
-					  <%= f.text_field :clinic_name %></div>
+					  <#= f.text_field :clinic_name %></div>
+				
+						<div><#= f.label "Clinic id" %><br />
+					  <#= f.text_field :clinic_id %></div>					
+			
 						<div><%= f.label "Work phone" %><br />
 					  <#= f.telephone_field :phone %></div>
 					
 					  <div><%= f.label "Extension (if any)" %><br />
 					  <#= f.text_field :extension %></div>
+					
 			
+						<div><#= f.label "Price Schedule ( for testing )" %><br />
+					  <#= f.text_field :price_schedule %></div>
 					-->
 					  <div><%= f.submit "Update" %></div>
 						<i><span style="color:orange;">(Remember: You need to enter your current password above to confirm your changes.)</span></i>
