interim fixes to clinician to set user role to 'clinician' when clinic administrator creates a clinicin

--- a/app/views/clinics/edit.html.erb
+++ b/app/views/clinics/edit.html.erb
@@ -116,7 +116,7 @@
 							<th>First Name</th>
 							<th>Last Name</th>
 							<th align="left">Email</th>
-							<th>Password</th>
+							<!-- <th>Password</th> -->
 							<th class="actions" align="left">Action</th>
 
 							<% @clinic.clinicians.each do | clinician | %>
