--- a/app/views/clinics/edit.html.erb
+++ b/app/views/clinics/edit.html.erb
@@ -131,6 +131,12 @@
 						</table>
 						
 						<button class="newClinician"><%= link_to("New Clinician", new_clinician_path()) %></button>
+						<p></p>
+						<p></p>
+						<p></p>
+						<div id="disclaimer">
+							<p>(*) Please note that we are using the term 'clinic' in a generic sense.  As used here it refers to</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; clinics, practices, managed health care facilities, hospital units, sports medicine facilities, gyms/spas, ... </p> 
+						</div>
 					</div>
 
 				</div>
