--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -186,7 +186,7 @@
 	<!-- logo_container ——————————————————————————————————————————————————————————————— -->
 
 	<div id="logo_container">
-		<a href="/en" id="logo" title="home page" name="logo">competitor search results page</a>
+		<a href="/en" id="logo" title="home page" name="logo"></a>
 	</div>
 
 <% end %> <!-- end of content-for middleBand-->
