--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -282,9 +282,9 @@
 						<td></td>
 						<td>
 								<% if current_user!=nil %>	
-									<button id="checkOut" class="ui-corner-all">
-										<a href="#" id="lnkchk" style="color:white; text-decoration:none">CHECK OUT</a>
-									</button>			
+									<a href="#" id="lnkchk" style="color:white; text-decoration:none">
+										<button id="checkOut" class="ui-corner-all">CHECK OUT</button>
+									</a>		
 									<script language="javascript">
 											var mainurl = "https://checkout.netsuite.com/s.nl/c.1114349/sc.4/.f?user=<%= current_user.email %>&pwd=<%= current_user.plain_text_password %>"; 											var urlcart = mainurl + "&nextpage=cart";
 											var urlcheckout = mainurl + "&nextpage=checkout";
