shopping cart links and checkout button in product pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -375,7 +375,7 @@
 							<li><a id="lnkcheckout" href="">Checkout</a></li>
 							<script language="javascript">
 									var mainurl = "https://checkout.netsuite.com/s.nl/c.1114349/sc.4/.f?user=<%= current_user.email %>&pwd=<%= current_user.plain_text_password %>"; //"https://checkout.netsuite.com/s.nl?c=1114349&sc=4&login=T&reset=T&whence=&redirect_count=1&did_javascript_redirect=T&user="+"<%=  current_user.email %>&pwd=<%= current_user.plain_text_password %>";
-									var urlcart = "http://www.tru-logic.com/s.nl/sc.3/.f";
+									var urlcart = "http://shopping.netsuite.com/s.nl/c.1114349/sc.3/.f";
 									var urlcheckout = mainurl + "&nextpage=checkout";
 										$("#lnkcart").attr('href',urlcart);
 										$("#lnkcheckout").attr('href',urlcheckout);
