--- a/app/views/layouts/application_pre_search.html.erb
+++ b/app/views/layouts/application_pre_search.html.erb
@@ -248,7 +248,7 @@
 			<ul>
 				<li><a href="https://checkout.netsuite.com/s.nl?c=1114349&sc=6&login=T&reset=T&newcust=T&noopt=T">register</a></li>
 				<li><a href="https://checkout.netsuite.com/s.nl/c.1114349/sc.6/.f?login=T&reset=T">login</a></li>
-				<li><a href="http://www.tru-logic.com/s.nl/sc.3/.f">cart</a></li>
+				<li><a href="http://shopping.netsuite.com/s.nl/c.1114349/sc.3/.f">cart</a></li>
 				<li><a href="https://checkout.netsuite.com/s.nl/c.1114349/sc.4/.f">checkout</a></li>
 			</ul>
 		</div>
