--- a/app/views/base_products/show.html.erb
+++ b/app/views/base_products/show.html.erb
@@ -223,9 +223,8 @@
 											<button id="checkOut" class="ui-corner-all">CHECK OUT</button>
 										</a>
 										<script language="javascript">
-												var mainurl = "https://checkout.netsuite.com/s.nl/c.1114349/sc.4/.f?user=<%= current_user.email %>&pwd=<%= current_user.plain_text_password %>"; 											var urlcart = mainurl + "&nextpage=cart";
-												var urlcheckout = mainurl + "&nextpage=checkout";
-													$("#lnkchk").attr('href',urlcheckout);
+												var urlcheckout = "http://shopping.netsuite.com/s.nl/c.1114349/sc.3/.f";
+											    $("#lnkchk").attr('href',urlcheckout);
 										</script>
 									<% end %>
 							</td>
